--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,9 @@
   <title>Document</title>
 </head>
 <body>
-  hello webpack
-  some text
+
+  <h1>hello webpack</h1>
+  <h3>some text</h3>
+
 </body>
 </html>
